src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>This field shows the Job function of the particular Lead</description>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Administration/Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset/Facilities Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bio-Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer and Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory/Phlebotomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics/Supply Chain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising/PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production/Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing/Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality/Safety/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>This field indicates Job Role of Lead</description>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer/Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean/Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/Deputy Dir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVP, SVP, VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project/Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_18_Digit_Id__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead 18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned_By__c</fullName>
        <label>Lead Assigned By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Closed_lost_Date__c</fullName>
        <description>This field will capture the date when the Lead Status is changed to &apos;Closing lost&apos;</description>
        <label>Lead Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Closing_Deal_Date__c</fullName>
        <description>This field will capture the date when the Lead Status is changed to &apos;Closing Deal&apos;</description>
        <label>Lead Closing Deal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Source__c</fullName>
        <description>This field contains the source from where the Lead was migrated</description>
        <label>Lead Conversion Source</label>
        <picklist>
            <picklistValues>
                <fullName>EVM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Country_Destination__c</fullName>
        <description>This field is used to capture Lead Destination Country</description>
        <inlineHelpText>Shows country destination of the products being purchased</inlineHelpText>
        <label>Lead Country Destination</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius &amp; Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Marketing_Qualified_Date__c</fullName>
        <description>This field will capture the date when the Lead Status is changed to Marketing Qualified</description>
        <label>Lead Marketing Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Qualified_Date__c</fullName>
        <description>This field will capture the date when the Lead Status is changed to Sales Qualified</description>
        <label>Lead Sales Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_Closed_Won__c</fullName>
        <description>This workflow will capture the time when the lead stage is Closed Won</description>
        <label>Lead Stage - Closed Won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_MAL_Date__c</fullName>
        <description>This workflow will capture the time when the lead stage is MAL</description>
        <label>Lead Stage - MAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_MQL_Date__c</fullName>
        <description>This workflow will capture the time when the lead stage is MQL</description>
        <label>Lead Stage - MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_SAL_Date__c</fullName>
        <description>This workflow will capture the time when the lead stage is SAL</description>
        <label>Lead Stage - SAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_SGL_Date__c</fullName>
        <description>This workflow will capture the time when the lead stage is SGL</description>
        <label>Lead Stage - SGL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_SQL_Date__c</fullName>
        <description>This workflow will capture the time when the lead stage is SQL</description>
        <label>Lead Stage - SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>This field shows the different Lead Stages for the Lead</description>
        <label>Lead Stage</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_State_Province_Destination__c</fullName>
        <description>States</description>
        <label>Lead State/Province Destination</label>
        <picklist>
            <controllingField>Lead_Country_Destination__c</controllingField>
            <picklistValues>
                <fullName>Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrigento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aisén del General Carlos Ibáñez del Campo&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alessandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amapá</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antofagasta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aosta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Araucanía</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arezzo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arica and Parinacota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascoli Piceno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asti</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Change_Date__c</fullName>
        <description>This field is created to capture the lead Status change date</description>
        <label>Lead Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Check__c</fullName>
        <description>This will have the count of days when Lead status was last changed</description>
        <label>Lead Status Check</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Not_Updated_Since__c</fullName>
        <description>This field is created to capture the days, since the  lead status is NOT changed</description>
        <formula>today()- Lead_Status_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Not Updated Since</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Value_Change_Date__c</fullName>
        <description>This field is used to capture the date when Lead Value was changed</description>
        <label>Lead Value Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Value_Lead_Amount__c</fullName>
        <description>This field is used to show the Lead Amount along with the currency</description>
        <label>Lead Value (Lead Amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Accept/Reject</label>
        <picklist>
            <picklistValues>
                <fullName>Offered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <label>#Leads</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_Record_Type__c</fullName>
        <description>This field is used to identify the Record Types of Legacy Leads</description>
        <label>Legacy Lead Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <description>This field is created to capture the Owner&apos;s Manager&apos;s Email Address to send the email notification</description>
        <label>Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Account_Type__c</fullName>
        <description>This field shows the Marketing Account Type of Lead</description>
        <label>Marketing Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Named</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <description>This field is created for the Marketing users to populate the Status</description>
        <label>Marketing Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_Users__c</fullName>
        <description>This field determines the Number of Unit/Users present</description>
        <label>Number of Units / Users</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 - 500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Assigned_Date__c</fullName>
        <label>Partner Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Company_Name__c</fullName>
        <description>This field is required at Partner Assignment. It is the name of the Account.</description>
        <inlineHelpText>Select partner account to assign lead to</inlineHelpText>
        <label>Partner Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads(Partner Assigned)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Email__c</fullName>
        <description>This Field displays the Email Address of the Partner Contact</description>
        <formula>Partner_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Name__c</fullName>
        <description>This field is required at Partner Assignment. It stores the contact name of the Partner</description>
        <inlineHelpText>Select partner contact when lead is assigned to MSI SFDC or  Z SFDC only.</inlineHelpText>
        <label>Partner Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Phone__c</fullName>
        <description>This Field Displays the Phone Number of the Partner Contact</description>
        <formula>Partner_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Lead_Created_in_MSI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be populated by the interface as a response when a Partner lead is Created successfully  in MSI</description>
        <label>Partner Lead Created in MSI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <description>This field includes Phone Country Code values.</description>
        <label>Phone Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>62</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Information__c</fullName>
        <description>It is used as look up field to Opportunity</description>
        <label>Pre-Sales Information</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pre-Sales Information</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>This field is used to identify the Preferred Contact Method of the Lead</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone &amp; Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Handheld_Operating_System__c</fullName>
        <label>Preferred Handheld Operating System?</label>
        <picklist>
            <controllingField>Handheld_Component_For_Opportunity__c</controllingField>
            <picklistValues>
                <fullName>Legacy MSFT (Windows Mobile or CE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window 8/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>